@@ -1,6 +1,7 @@
 3.0.3
  * Fixed a problem with applying station dynamic metadata to a LWAStation object
  * Make the GloTEC model downloads more granular to help with data transfer sizes
+ * Compress GloTEC model after download to reduce disk usage
 
 3.0.2
  * Enabled caching in lsl.sim.beam to reduce the number of times a model is loaded
